; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/bootstrap/extr_bootstrap.c_build_indices.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/bootstrap/extr_bootstrap.c_build_indices.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, %struct.TYPE_2__* }

@ILHead = common dso_local global %struct.TYPE_2__* null, align 8
@NoLock = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @build_indices() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %29, %0
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ILHead, align 8
  %5 = icmp ne %struct.TYPE_2__* %4, null
  br i1 %5, label %6, label %33

6:                                                ; preds = %3
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ILHead, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = load i32, i32* @NoLock, align 4
  %11 = call i32 @table_open(i32 %9, i32 %10)
  store i32 %11, i32* %1, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ILHead, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @NoLock, align 4
  %16 = call i32 @index_open(i32 %14, i32 %15)
  store i32 %16, i32* %2, align 4
  %17 = load i32, i32* %1, align 4
  %18 = load i32, i32* %2, align 4
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ILHead, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @index_build(i32 %17, i32 %18, i32 %21, i32 0, i32 0)
  %23 = load i32, i32* %2, align 4
  %24 = load i32, i32* @NoLock, align 4
  %25 = call i32 @index_close(i32 %23, i32 %24)
  %26 = load i32, i32* %1, align 4
  %27 = load i32, i32* @NoLock, align 4
  %28 = call i32 @table_close(i32 %26, i32 %27)
  br label %29

29:                                               ; preds = %6
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ILHead, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 3
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** %31, align 8
  store %struct.TYPE_2__* %32, %struct.TYPE_2__** @ILHead, align 8
  br label %3

33:                                               ; preds = %3
  ret void
}

declare dso_local i32 @table_open(i32, i32) #1

declare dso_local i32 @index_open(i32, i32) #1

declare dso_local i32 @index_build(i32, i32, i32, i32, i32) #1

declare dso_local i32 @index_close(i32, i32) #1

declare dso_local i32 @table_close(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
